<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="5dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/circle_border">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/details_userImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:civ_border_color="#3f51b5"
                app:civ_border_width="4dp"
                app:civ_shadow_color="#3f51b5"
                app:civ_shadow_radius="10dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/details_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="32sp"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/details_userLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_userName"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/user_location"
            android:textAllCaps="true"
            android:textColor="@color/address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/details_userBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details_userLocation"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center|center_horizontal"
            android:fontFamily="sans-serif"
            android:maxWidth="350dp"
            android:maxLines="1"
            android:paddingStart="25dp"
            android:paddingEnd="5dp"
            android:text="@string/bio"
            android:textAllCaps="false"
            android:textColor="@color/address"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/options_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/settings"
            android:onClick="onSettingsClicked" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/follow_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_info_container"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/followersBg"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/details_userFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/_000"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/followers"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/followingBg"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/details_userFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/_000"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/following"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/follow_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blog"
                    android:textColor="@color/headings"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/details_userBlog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/blog_blog_com"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repositories"
                    android:textColor="@color/headings"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/details_userRepo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/_000"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gists"
                    android:textColor="@color/headings"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/details_userGists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/gists"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github_account_link"
                    android:textColor="@color/headings"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/details_userGitHub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/github_com_user"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>