<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/repo_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/java"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/languageColor" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/repo_name"
            android:textColor="@color/headings" />

        <TextView
            android:id="@+id/repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/repo_language"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/repo_name"
            android:layout_marginTop="-8dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repo_name"
            android:layout_alignParentStart="true"
            android:paddingBottom="4dp"
            android:text="@string/repo_description"
            android:textColor="@color/headings" />

        <TextView
            android:id="@+id/repo_description"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDesc"
            android:layout_marginEnd="11dp"
            android:layout_toStartOf="@+id/repo_language"
            android:ellipsize="end"
            android:paddingBottom="8dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/repo_description"
            android:layout_marginTop="-8dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repo_description"
            android:layout_alignParentStart="true"
            android:paddingBottom="4dp"
            android:text="@string/repo_created_date"
            android:textColor="@color/headings" />

        <TextView
            android:id="@+id/repo_createdDate"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDate"
            android:layout_alignEnd="@+id/repo_description"
            android:layout_marginEnd="3dp"
            android:ellipsize="end"
            android:text="@string/_20_02_2020"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal" />

        <View
            android:id="@+id/last_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/repo_createdDate"
            android:layout_marginTop="8dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_line"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star_image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/star" />

                <TextView
                    android:id="@+id/repo_star"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/watch_image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/watch" />

                <TextView
                    android:id="@+id/repo_watch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/forks_image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/fork" />

                <TextView
                    android:id="@+id/repo_forks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>
